--- a/src/components/blocks/Article.astro
+++ b/src/components/blocks/Article.astro
@@ -17,7 +17,7 @@ const {
 ---
 
 <a href={`/posts/${slug}`} class="hover-top">
-  <article class="rounded-lg pb-5 prose max-w-none">
+  <article class="bg-white p-5 rounded-2xl prose max-w-none">
     {
       img && (
         <Image src={img} class="rounded-xl" alt={title} format={'avif'} quality={'low'} />
