--- a/src/components/blocks/Title.astro
+++ b/src/components/blocks/Title.astro
@@ -1,19 +1,24 @@
 ---
+
 ---
 
-<h1
-  class="flex items-center gap-2 md:gap-5 flex-wrap text-[52px] sm:text-[60px] md:text-[70px]"
->
+<h1 class="flex md:flex-row flex-col md:gap-5 gap-0 text-6xl font-black justify-center items-center">
   <span
-    class="block text-transparent bg-clip-text bg-gradient-to-br from-green-400 to-green-600"
+    data-aos="fade-right"
+    data-aos-duration="300"
+    class="block text-transparent bg-clip-text bg-gradient-to-br from-green-300 to-green-500"
     >Анонимные</span
   >
   <span
-    class="block text-transparent bg-clip-text bg-gradient-to-br from-yellow-400 to-orange-600"
+    data-aos="fade-down"
+    data-aos-duration="600"
+    class="block text-transparent bg-clip-text bg-gradient-to-br from-yellow-300 to-orange-500"
     >Интернет</span
   >
   <span
-    class="block text-transparent bg-clip-text bg-gradient-to-br from-red-400 to-red-600"
+    data-aos="fade-left"
+    data-aos-duration="900"
+    class="block text-transparent bg-clip-text bg-gradient-to-br from-red-300 to-red-500"
     >Зависимые</span
   >
 </h1>
