--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,23 +1,18 @@
 ---
-const { href, class: className, ...props } = Astro.props;
+const { href, class: className, ...props } = Astro.props
 
-const { pathname } = Astro.url;
-const isActive = href === pathname || href === pathname.replace(/\/$/, "");
+const { pathname } = Astro.url
+const isActive = href === pathname || href === pathname.replace(/\/$/, '')
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
- <slot />
+  <slot />
 </a>
 <style>
- a {
-  padding: 5px 15px;
-  flex-shrink: 0;
-  font-size: 16px;
-  font-weight: 500;
-  color: var(--text);
-  border-radius: var(--border-small);
- }
- a.active {
-  background-color: #eee;
- }
+  a {
+    @apply font-medium px-3 py-1 rounded-lg hover:bg-gray-200 transition-colors  ease-linear;
+  }
+  a.active {
+    @apply bg-gray-100;
+  }
 </style>
