--- a/src/pages/groups/index.astro
+++ b/src/pages/groups/index.astro
@@ -3,31 +3,32 @@ import { getCollection } from 'astro:content'
 import Layout from '../../layout/Layout.astro'
 
 const groups = await getCollection('groups')
+const groupsCounter = (await getCollection('groups')).length
 ---
 
 <Layout
   title="Онлайн собрания и Офлайн"
   desc="Время встреч для анонимных интернет зависимых, шде деляться опытом, силами и надеждой."
 >
-  <section class="groups">
-    <div class="container">
-      <div class="grid">
-        {
-          groups &&
-            groups.map((group) => (
-              <div class="p-4 bg-gray-50 rounded-lg ring-1 ring-gray-200">
+  <section>
+    <h3 class="pb-10 text-2xl font-medium text-gray-700">
+      ⭐ Количество групп на данный момент: <b>{groupsCounter}</b>
+    </h3>
+    <h4 class="py-10 text-2xl text-gray-700 font-medium">🌐 Онлайн группы</h4>
+    <div class="grid grid-cols-1 items-start md:grid-cols-2 lg:grid-cols-3 gap-5">
+      {
+        groups &&
+          groups
+            .filter((f) => f.data.type === 'Онлайн')
+            .map((group) => (
+              <div class="p-4 bg-white rounded-lg ring-1 ring-gray-100">
                 <div class="flex flex-col gap-3">
                   <div class="flex items-center justify-between gap-2 flex-wrap">
                     <h4 class="font-bold text-lg">{group.data.title}</h4>
-                    {group.data.type === 'Онлайн' ? (
-                      <span class="bg-green-100 ring-1 ring-green-200 px-2 py-1 rounded-md">
-                        🌐 {group.data.type}
-                      </span>
-                    ) : (
-                      <span class="bg-sky-100 ring-1 ring-sky-200 px-2 py-1 rounded-md">
-                        🌤 {group.data.type}
-                      </span>
-                    )}
+
+                    <span class="bg-green-100 ring-1 ring-green-200 px-2 py-1 rounded-md">
+                      🌐 {group.data.type}
+                    </span>
                   </div>
                   <time class="font-medium" datetime={group.data.dateTime}>
                     ⌚
@@ -36,51 +37,52 @@ const groups = await getCollection('groups')
                     </span>
                   </time>
                   <p>{group.data.description}</p>
-                  {group.data.type === 'Онлайн' ? (
-                    <a
-                      href={group.data.link}
-                      class="text-center py-1 px-2 rounded-md bg-blue-500 text-white hover:bg-blue-700"
-                    >
-                      Войти
-                    </a>
-                  ) : (
-                    <a
-                      href={group.data.link}
-                      class="text-center py-1 px-2 rounded-md bg-purple-500 text-white hover:bg-purple-700"
-                    >
-                      На карте
-                    </a>
-                  )}
+
+                  <a
+                    href={group.data.link}
+                    class="text-center py-1 px-2 rounded-md bg-blue-500 text-white hover:bg-blue-700"
+                  >
+                    Войти
+                  </a>
                 </div>
               </div>
             ))
-        }
-      </div>
+      }
+    </div>
+    <h4 class="py-10 text-2xl text-gray-700 font-medium">🌤 Живые группы</h4>
+    <div class="grid grid-cols-1 items-start md:grid-cols-2 lg:grid-cols-3 gap-5">
+      {
+        groups &&
+          groups
+            .filter((f) => f.data.type === 'Живая')
+            .map((group) => (
+              <div class="p-4 bg-white rounded-lg ring-1 ring-gray-100">
+                <div class="flex flex-col gap-3">
+                  <div class="flex items-center justify-between gap-2 flex-wrap">
+                    <h4 class="font-bold text-lg">{group.data.title}</h4>
+
+                    <span class="bg-sky-100 ring-1 ring-sky-200 px-2 py-1 rounded-md">
+                      🌤 {group.data.type}
+                    </span>
+                  </div>
+                  <time class="font-medium" datetime={group.data.dateTime}>
+                    ⌚
+                    <span class="underline underline-offset-4">
+                      {group.data.dateTime}
+                    </span>
+                  </time>
+                  <p>{group.data.description}</p>
+
+                  <a
+                    href={group.data.link}
+                    class="text-center py-1 px-2 rounded-md bg-purple-500 text-white hover:bg-purple-700"
+                  >
+                    На карте
+                  </a>
+                </div>
+              </div>
+            ))
+      }
     </div>
   </section>
 </Layout>
-
-<style>
-  .grid {
-    padding: 30px;
-    align-items: start;
-    border-radius: var(--border-large);
-    background-color: var(--white);
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-  }
-  @media (max-width: 992px) {
-    .grid {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-  @media (max-width: 768px) {
-    .grid {
-      grid-template-columns: repeat(1, 1fr);
-    }
-    .grid {
-      margin: 0 -20px 0;
-    }
-  }
-</style>
