--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -12,7 +12,7 @@ const getPosts = posts
 >
   <div class="container">
     <section class="mt-2">
-      <div class="grid gap-10 grid-cols-1 md:grid-cols-2">
+      <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
         {
           getPosts &&
             getPosts.map((post) => <Article slug={post.slug} data={post.data} />)
