--- a/src/pages/stories.astro
+++ b/src/pages/stories.astro
@@ -1,28 +1,32 @@
 ---
 import { getCollection } from 'astro:content'
-import Layout from "../layout/Layout.astro"
+import Layout from '../layout/Layout.astro'
 
-const stories =  await getCollection("story")
+const stories = await getCollection('story')
 ---
 
 <Layout
- title="Личные истории членов"
- desc="Личные истории членов АИЗ, которые прошли путь и пришли к душевному спокойствию."
+  title="Личные истории членов"
+  desc="Личные истории членов АИЗ, которые прошли путь и пришли к душевному спокойствию."
 >
- <div class="container">
-  <div class="grid gap-5 grid-cols-1 md:grid-cols-2">
-   {stories && 
-    stories.map((item)=>(
-      <a href={`/stories/${item.slug}/`} class="hover:translate-y-1  transition-all ease-out">
-        <article class="flex flex-col gap-2 bg-white p-4 rounded-lg">
-          <h3 class="font-bold text-2xl">{item.data.title}</h3>
-          <p class="font-normal leading-relaxed text-gray-500 line-clamp-2">
-          {item.data.description}
-          </p>
-       </article>
-       </a>
-    ))
-   }
+  <div class="container">
+    <div class="grid gap-5 grid-cols-1 md:grid-cols-2">
+      {
+        stories &&
+          stories.map((item) => (
+            <a
+              href={`/stories/${item.slug}/`}
+              class="hover:translate-y-1  transition-all ease-out"
+            >
+              <article class="flex flex-col gap-2 bg-white p-4 rounded-2xl ring-1 ring-gray-200 outline outline-offset-2 outline-blue-100">
+                <h3 class="font-bold text-2xl">{item.data.title}</h3>
+                <p class="font-normal leading-relaxed text-gray-500 line-clamp-2">
+                  {item.data.description}
+                </p>
+              </article>
+            </a>
+          ))
+      }
+    </div>
   </div>
- </div>
 </Layout>
