--- a/src/pages/stories/[slug].astro
+++ b/src/pages/stories/[slug].astro
@@ -2,8 +2,6 @@
 import { getCollection } from 'astro:content'
 import Post from '../../layout/Post.astro'
 
-export const prerender = true
-
 export async function getStaticPaths() {
   const posts = await getCollection('story')
   return posts.map((post) => ({
@@ -17,8 +15,15 @@ const { Content } = await post.render()
 ---
 
 <Post title={post.data.title}>
+  <aside class="mx-auto max-w-[780px] mb-10">
+    <a
+      href="/stories"
+      class="text-lg md:ml-10 ml-5 bg-white font-medium rounded-lg py-2 px-3"
+      >⬅ Назад к историям</a
+    >
+  </aside>
   <main
-    class="mx-auto max-w-[780px] prose lg:prose-lg md:prose-md prose-p:text-slate-900 prose-a:text-blue-500 prose-p:font-base prose-p:leading-relaxed prose-a:no-underline prose-stone"
+    class="mx-auto max-w-[780px] prose lg:prose-lg md:prose-md prose-p:text-slate-900 prose-a:text-blue-500 prose-p:font-base prose-p:leading-relaxed prose-a:no-underline prose-stone bg-white rounded-2xl md:p-10 p-5"
   >
     <h1>{post.data.title}</h1>
     <Content />
