--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -62,10 +62,11 @@ const typeSiteFinal = typeSite ?? 'website'
     <Footer />
 
     <Metrika />
-    <script>
+    
+    <!-- <script>
       import AOS from 'aos'
       import 'aos/dist/aos.css'
       AOS.init()
-    </script>
+    </script> -->
   </body>
 </html>
