--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,13 +10,13 @@ const posts = await getCollection('posts')
 <div class="top"></div>
 <footer>
   <div class="container max-w-6xl px-5 mx-auto">
-    <div class="top-footer">
+    <Logo />
+    <!-- <div class="top-footer">
       <div
         class="grid-footer grid gap-10 grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-6"
       >
         <div class="col-footer">
           <div class="logo-footer">
-            <Logo />
           </div>
         </div>
         <div class="col-footer">
@@ -39,7 +39,7 @@ const posts = await getCollection('posts')
                 {post.data.title}
               </a>
             ))
-          }
+          } 
         </div>
         <div class="col-footer">
           <span>Последние посты</span>
@@ -57,14 +57,17 @@ const posts = await getCollection('posts')
           <a href="https://t.me/solutionof12steps">АИЗ: группа 12 шагов</a>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="bottom-footer">
       <div class="bottom-flex">
         <span><b id="year"></b></span>
-        <div class="socials">
+        <div class="socials flex flex-wrap gap-1">
           <a href={VK} target="_blank">ВКонтакте</a>
           <a href={TELEGRAM} target="_blank">Телеграм</a>
           <a href={YOUTUBE} target="_blank">Ютуб</a>
+          <a href="https://t.me/solutionof12steps">АИЗ: группа 12 шагов</a>
+          <a href="https://t.me/aiz_rko">АИЗ РКО (Комитет по развитию)</a>
+          <a href={BASE_FILES}>12 шагов - база знаний</a>
         </div>
       </div>
     </div>
