--- a/src/components/blocks/Title.astro
+++ b/src/components/blocks/Title.astro
@@ -2,22 +2,18 @@
 
 ---
 
-<h1 class="flex md:flex-row flex-col md:gap-5 gap-0 text-6xl font-black justify-center items-center">
+<h1 class="flex md:flex-row flex-col md:gap-5 gap-0 text-5xl sm:text-6xl font-black justify-center items-center">
   <span
-    data-aos="fade-right"
-    data-aos-duration="300"
     class="block text-transparent bg-clip-text bg-gradient-to-br from-green-300 to-green-500"
     >Анонимные</span
   >
   <span
-    data-aos="fade-down"
-    data-aos-duration="600"
+
     class="block text-transparent bg-clip-text bg-gradient-to-br from-yellow-300 to-orange-500"
     >Интернет</span
   >
   <span
-    data-aos="fade-left"
-    data-aos-duration="900"
+ 
     class="block text-transparent bg-clip-text bg-gradient-to-br from-red-300 to-red-500"
     >Зависимые</span
   >
