--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -15,7 +15,9 @@ const getPosts = posts
       <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
         {
           getPosts &&
-            getPosts.map((post) => <Article slug={post.slug} data={post.data} />)
+            getPosts
+              .sort((a, b) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime())
+              .map((post) => <Article slug={post.slug} data={post.data} />)
         }
       </div>
     </section>
