--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -19,7 +19,7 @@ const words = [
     clip: 'clip-path: polygon(50% 0%, 100% 100%, 0% 100%);',
   },
   {
-    desc: '<b>Присоединиться</b> к нам - может каждый, независимо от возраста, пола, национальности, убеждений, религии, или отсутствия таковой.',
+    desc: '<b>Присоединиться к нам</b> - может каждый, независимо от возраста, пола, национальности, убеждений, ментальных состояний и диагнозов, религиозных взглядов.',
     emodji: '👥🌍',
     bg: 'bg-purple-50',
     clip: 'clip-path: polygon(11% 21.5%, 100% 0%, 100% 100%, 0% 100%);',
